# data-science-template

./: README.md
{{cookiecutter.directory_name}}/: Makefile  README.md  pyproject.toml
